# sidebar-bot

./: .gitignore  sidebar-bot.cabal
src/: Bot.hs
src/Bot/: Args.hs  Utils.hs
src/Control/Concurrent/: VarThread.hs
src/Sources/: Azubu.hs  Gosu.hs  Hitbox.hs  MLG.hs  MatchBot.hs  PlayerCount.hs  PrizePool.hs  Twitch.hs
src/Sources/MatchBot/: Main.hs
src/Sources/MatchBot/Templates/: Finished.hs  Flairs.hs  Ongoing.hs
