name: sidebar-bot
version: 0.1.0.0
build-type: Simple
cabal-version: >= 1.10
license: BSD3

library
  exposed-modules:
    Bot
    Bot.Args
    Bot.Utils
    Control.Concurrent.VarThread
    Sources.Azubu
    Sources.Gosu
    Sources.Hitbox
    Sources.MLG
    Sources.MatchBot
    Sources.MatchBot.Templates.Finished
    Sources.MatchBot.Templates.Flairs
    Sources.MatchBot.Templates.Ongoing
    Sources.PlayerCount
    Sources.PrizePool
    Sources.Twitch
  hs-source-dirs: src/
  default-language: Haskell2010
  default-extensions:
    FlexibleContexts
    LambdaCase
    OverloadedStrings
    RankNTypes
    TemplateHaskell
    ViewPatterns
  ghc-options: -Wall
  build-depends:
    base == 4.*,
    aeson,
    api-builder,
    async,
    bifunctors,
    bytestring,
    containers,
    dota2,
    either,
    googl,
    lens,
    mtl,
    optparse-applicative,
    reddit,
    stm,
    text,
    text-format,
    time,
    transformers,
    yaml

executable sidebar-bot
  main-is: Main.hs
  hs-source-dirs: ./
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base == 4.*,
    sidebar-bot

executable match-bot
  main-is: Main.hs
  hs-source-dirs: src/Sources/MatchBot/
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base == 4.*,
    sidebar-bot
